update email label

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <%= messages.error %> 
 <% } %> 
 <form action="/login" method="post">
-    <div><label for="email"></label>Email: <input type="email" name="emailad" id="email"></div>
+    <div><label for="email"></label>Email ID: <input type="email" name="emailad" id="email"></div>
     <div><label for="password"></label>Password: <input type="password" name="password" id="password"></div>
     <input type="submit" value="Login">
 </form>
