--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,4 @@
-<h4>Register</h4>
+<h4>Register Today</h4>
 <form action="/register" method="post">
     <div><label for="name">Your Full Name: </label><input type="text" name="name" for="name"></div>
     <div><label for="email"></label>Email: <input type="email" name="email" for="email"></div>
